@@ -8,15 +8,14 @@ Operating System
 
 A recent Linux distribution for Intel x86 or AMD Opteron (x86-64).
 
-If you are using RedHat 9, see "Notes for RedHat 9 Users" below.
-
-
 C++ compiler
 ------------
 
 - GCC 3.2; or
 
 - GCC 2.96 with STLport 4.5
+
+- Intel C++ 8.0
 
 The STL (Standard Template Library) that is included with GCC 2.96 is
 not supported! You must use STLport 4.5 with GCC 2.96. You can
@@ -28,16 +27,24 @@ For STLport installation instructions, please see:
 
 http://www.stlport.org/doc/install.html
 
-For GCC 3.2, you can use the included STL library. Downloading and
-installing STLport is not required for this compiler version.
+For GCC 3.2 or ICC 8.0, you can use the included STL library. Downloading 
+and installing STLport is not required for these compilers.
 
 
 Third-party libraries
 ---------------------
 
 - Berkeley DB 4.1.25 configured with --enable-cxx
-  You can download the Berkeley DB source distribution 
-  from http://www.sleepycat.com
+  You can download the Berkeley DB 4.1.25 source distribution 
+  from http://www.sleepycat.com/download/patchlogsdb.shtml
+
+  With Intel C++, it is critical to build and link libdb_cxx-4.1.so
+  with icc (not cc). A recommended configuration is:
+  CXX="icc -no-gcc" CC=icc ../dist/configure --enable-cxx
+  (and --prefix=<dir> and --enable-java if you like)
+
+  Also, if you are using RedHat 9 and do not want to use NTPL, 
+  set LD_ASSUME_KERNEL to 2.4.1 before running configure.
 
 - expat 1.9x
 
@@ -99,6 +106,9 @@ file. Make sure that the paths for the third-party libraries are set
 correctly if they are not installed in the default location /usr/lib
 and /usr/include.
 
+If you want to build Ice with the Intel C++ compiler, set CXX to icc:
+$ export CXX=icc
+
 Now you're ready to build Ice:
 
 $ make
@@ -140,45 +150,7 @@ To build Ice in 64 bit mode, you need to:
 
 - Set the environment variable LP64 to yes, e.g.: $ export LP64=yes
 
-- Build and test as described above.
-
-
-======================================================================
-Notes for RedHat 9 Users
-======================================================================
-
-Ice is not currently compatible with the "NPTL" threading model used
-by default on RedHat 9, causing Ice programs to hang
-indefinitely. Until this issue is resolved, you will need to set the
-following environment variable:
-
-export LD_ASSUME_KERNEL=2.4.1
-
-Also note that BerkeleyDB is sensitive to this environment variable,
-requiring you to build BerkeleyDB from source with this environment
-variable defined. Otherwise, a program that uses BerkeleyDB will fail
-with the error code ENOSYS ("Function not implemented") when this
-environment variable is set.
-
-Unfortunately, this means you cannot use the version of BerkeleyDB
-that is supplied by RedHat 9 with Ice, because it was not built
-properly for use with LD_ASSUME_KERNEL. We recommend downloading the
-latest release from the URL shown above.
-
-The steps for building Berkeley DB are straightforward:
-
-$ tar xzf db-X.Y.Z.tar.gz
-$ export LD_ASSUME_KERNEL=2.4.1
-$ cd db-X.Y.Z/build_unix
-$ ../dist/configure --enable-cxx --enable-java --prefix=/opt/db-X.Y.Z
-$ make
-
-The --enable-java option is necessary if you plan to use Ice for Java.
-The --prefix option overrides the default installation directory.
-
-Please refer to the Berkeley DB documentation if you need more
-information.
-
+- Build and test as described above (with gcc).
 
 ======================================================================
 Installation
