@@ -1,6 +1,8 @@
 Changes since version 1.2.0
 ---------------------------
 
+- Added support for the Intel C++ compiler (v8.0) on Linux x86
+
 - Removed the Ice.Daemon, Ice.DaemonNoChdir and Ice.DaemonNoClose
   properties. Support for Unix daemons and Win32 services has been
   integrated into the Ice::Service class.
